@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.184 2000/05/01 21:14:57 hno Exp $
+dnl  $Id: configure.in,v 1.185 2000/05/02 19:22:00 hno Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.184 $)dnl
+AC_REVISION($Revision: 1.185 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(cfgaux)
 
@@ -694,6 +694,7 @@ AC_CHECK_HEADERS( \
 	strings.h \
 	sys/file.h \
 	sys/ioctl.h \
+	sys/mount.h \
 	sys/msg.h \
 	sys/param.h \
 	sys/resource.h \
@@ -701,6 +702,7 @@ AC_CHECK_HEADERS( \
 	sys/socket.h \
 	sys/stat.h \
 	sys/statvfs.h \
+	sys/vfs.h \
 	sys/syscall.h \
 	sys/time.h \
 	sys/types.h \
@@ -1037,6 +1039,7 @@ AC_CHECK_FUNCS(\
 	snprintf \
 	srand48 \
 	srandom \
+	statfs \
 	sysconf \
 	syslog \
 	timegm \
