@@ -22,6 +22,8 @@ Changes to Squid-2.4.DEVEL3 ():
 	- allow-miss cache_peer option disabling the use of "only-if-cached".
 	  Meant to be used in conjunction with icp_hit_stale.
 	- Delay pools tuned to allow large initial pool values
+	- cachemgr filesystem space information changed to show useable space
+	  rather than raw space, and platform support somewhat extended.
 
 Changes to Squid-2.4.DEVEL2 ():
 
